Ya queda poca cosa

--- a/geoportal/descargas.html
+++ b/geoportal/descargas.html
@@ -133,22 +133,22 @@
 				
 		<!-- Botón abrir cerrar menú página -->
 		<!-- Botón Moverse por mapa -->
-		<button id="show_menu" type="button" class="btn btn-small btn-info btn-map" style="position: absolute; right: 0.5em; bottom: 30%; min-width: 1.375em">
+		<button id="show_menu" type="button" class="btn btn-small btn-info btn-map" style=" z-index: 2; position: absolute; right: 0.5em; bottom: 30%; min-width: 1.375em">
 			<i class="fa fa-navicon"></i>
 		</button>
 				
 		<!-- Botón Moverse por mapa -->
-		<button id="mover" type="button" class="btn btn-small btn-info btn-map" style="position: absolute; right: 0.5em; bottom: 10%; min-width: 1.375em">
+		<button id="mover" type="button" class="btn btn-small btn-info btn-map" style=" z-index: 2; position: absolute; right: 0.5em; bottom: 10%; min-width: 1.375em">
 			<i class="fa fa-hand-o-up"></i>
 		</button>
 	
 		<!-- Botón BBOX -->
-		<button id="bbox" type="button" class="btn btn-small btn-info btn-map" style="position: absolute; right: 0.5em; bottom: 20%; min-width: 1.375em">
+		<button id="bbox" type="button" class="btn btn-small btn-info btn-map" style=" z-index: 2; position: absolute; right: 0.5em; bottom: 20%; min-width: 1.375em">
 			<i class="fa fa-download"></i>
 		</button>
 		
 		<!-- Selector Capas Descargar -->
-		<div style="position: absolute; top: 0.5em; left: 20%; right: 20%;" class="btn-map">
+		<div style="position: absolute; top: 0.5em; left: 20%; right: 20%; z-index: 2" class="btn-map">
 			<select id="capas_mapa" class="selectpicker" data-style="btn-info" data-live-search="false" style="width: 100%">
 		   		<option value="jahr:muni_torrent">Municipio</option>
 	 			<option value="jahr:manzanas">Manzanas</option>
