--- a/geoportal/descargas.html
+++ b/geoportal/descargas.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-
+<title>Geoportal de Torrent - Visor de descargas</title>
+<meta name="description" content="Tu portal de Información Geográfica">
 <!-- Para dispositivos móviles -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -102,10 +103,10 @@
 									<!-- Collect the nav links, forms, and other content for toggling -->
 									<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 										<ul class="nav navbar-nav navbar-right">
-											<li class="active"><a href="/">Inicio</a></li>
-											<li class=""><a href="/#servicios">Servicios</a></li>
-											<li><a href="/visor">Visor</a></li>
+											<li class="active"><a href="#banner">Inicio</a></li>
+											<li class=""><a href="#servicios">Servicios</a></li>
 											<li><a href="#descargas">Descargas</a></li>
+											<li><a href="/visor">Visor</a></li>
 											<li><a href="#buscador">Buscador</a></li>
 										</ul>
 									</div>
