--- a/geoportal/index.html
+++ b/geoportal/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-
+<title>Geoportal de Torrent - Página de Inicio</title>
+<meta name="description" content="Tu portal de Información Geográfica">
 <!-- Para dispositivos móviles -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -100,8 +101,8 @@
 										<ul class="nav navbar-nav navbar-right">
 											<li class="active"><a href="#banner">Inicio</a></li>
 											<li class=""><a href="#servicios">Servicios</a></li>
-											<li><a href="/visor">Visor</a></li>
 											<li><a href="#descargas">Descargas</a></li>
+											<li><a href="/visor">Visor</a></li>
 											<li><a href="#buscador">Buscador</a></li>
 										</ul>
 									</div>
