Cambios, depuracion, ... Añadido control tracking denuncias cerca

--- a/geoportal/index.html
+++ b/geoportal/index.html
@@ -184,9 +184,9 @@
 										<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 											<div class="panel-body" style="text-align: center;">
 												<div class="btn-group-vertical col-lg-12">
-													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://localhost:8080/geoserver/jahr/wms?service=WMS&request=GetCapabilities&version=1.3.0">Servicio</button>
-													<button id="copy" service_url="http://localhost:8080/geoserver/jahr/wms?service=WMS&request=GetCapabilities&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
-													<button id="capabilities" service_url="http://localhost:8080/geoserver/jahr/wms?service=WMS&request=GetCapabilities&version=1.3.0" service_name="Servicio WMS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
+													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WMS&request=GetCapabilities&version=1.3.0">Servicio</button>
+													<button id="copy" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WMS&request=GetCapabilities&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
+													<button id="capabilities" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WMS&request=GetCapabilities&version=1.3.0" service_name="Servicio WMS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
 												</div>
 												<br>
 												<p>Los servicios web de mapas <b>WMS (Web Map Service)</b> producen mapas (imágenes digitales georeferenciadas) a partir de datos georeferenciados.</p>
@@ -205,9 +205,9 @@
 										<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 											<div class="panel-body" style="text-align: center;">
 												<div class="btn-group-vertical col-lg-12">
-													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://localhost:8080/geoserver/jahr/wms?service=WFS&request=GetCapabilities&version=1.3.0">Servicio</button>
-													<button id="copy" service_url="http://localhost:8080/geoserver/jahr/wms?service=WFS&request=GetCapabilities&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
-													<button id="capabilities" service_url="http://localhost:8080/geoserver/jahr/wms?service=WFS&request=GetCapabilities&version=1.3.0" service_name="Servicio WFS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
+													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WFS&request=GetCapabilities&version=1.3.0">Servicio</button>
+													<button id="copy" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WFS&request=GetCapabilities&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
+													<button id="capabilities" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WFS&request=GetCapabilities&version=1.3.0" service_name="Servicio WFS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
 												</div>
 												<br>
 												<p>Los servicios web de mapas <b>WMS (Web Map Service)</b> producen mapas (imágenes digitales georeferenciadas) a partir de datos georeferenciados.</p>
@@ -226,9 +226,9 @@
 										<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 											<div class="panel-body" style="text-align: center;">
 												<div class="btn-group-vertical col-lg-12">
-													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://localhost:8080/geoserver/jahr/wms?service=WCS&request=GetCapabilities&version=1.3.0">Servicio</button>
-													<button id="copy" service_url="http://localhost:8080/geoserver/jahr/wms?service=WCS&request=GetCapabilities&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
-													<button id="capabilities" service_url="http://localhost:8080/geoserver/jahr/wms?service=WCS&request=GetCapabilities&version=1.3.0" service_name="Servicio WCS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
+													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WCS&request=GetCapabilities&version=1.3.0">Servicio</button>
+													<button id="copy" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WCS&request=GetCapabilities&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
+													<button id="capabilities" service_url="http://192.168.1.14:8080/geoserver/jahr/wms?service=WCS&request=GetCapabilities&version=1.3.0" service_name="Servicio WCS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
 												</div>
 												<p></p>
 												<p>Los servicios web de mapas <b>WMS (Web Map Service)</b> producen mapas (imágenes digitales georeferenciadas) a partir de datos georeferenciados.</p>
@@ -248,9 +248,9 @@
 										<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 											<div class="panel-body" style="text-align: center;">
 												<div class="btn-group-vertical col-lg-12">
-													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://localhost:8080/geoserver/gwc/service/wmts?request=GetCapabilities&service=WMTS&version=1.3.0">Servicio</button>
-													<button id="copy" service_url="http://localhost:8080/geoserver/gwc/service/wmts?request=GetCapabilities&service=WMTS&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
-													<button id="capabilities" service_url="http://localhost:8080/geoserver/gwc/service/wmts?request=GetCapabilities&service=WMTS&version=1.3.0" service_name="Servicio WMTS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
+													<button id="ir" type="button" class="btn btn-default col-lg-12" service_url="http://192.168.1.14:8080/geoserver/gwc/service/wmts?request=GetCapabilities&service=WMTS&version=1.3.0">Servicio</button>
+													<button id="copy" service_url="http://192.168.1.14:8080/geoserver/gwc/service/wmts?request=GetCapabilities&service=WMTS&version=1.3.0" type="button" class="btn btn-default">Copiar url</button>
+													<button id="capabilities" service_url="http://192.168.1.14:8080/geoserver/gwc/service/wmts?request=GetCapabilities&service=WMTS&version=1.3.0" service_name="Servicio WMTS - GetCapabilities" type="button" class="btn btn-default">Get Capabilities</button>
 												</div>
 												<p></p>
 												<p>Los servicios web de mapas <b>WMS (Web Map Service)</b> producen mapas (imágenes digitales georeferenciadas) a partir de datos georeferenciados.</p>
@@ -383,15 +383,15 @@
 		console.log(capa + features);
 		
 		if (capa == 'jahr:ortofoto') {
-			window.open('http://localhost:8080/geoserver/jahr/wms?service=WMS&version=1.1.0&request=GetMap&layers=jahr:ortofoto&styles=&bbox=703922.4219253492,4361457.771400001,721973.2836746508,4370702.237000001&width=768' +
+			window.open('http://192.168.1.14:8080/geoserver/jahr/wms?service=WMS&version=1.1.0&request=GetMap&layers=jahr:ortofoto&styles=&bbox=703922.4219253492,4361457.771400001,721973.2836746508,4370702.237000001&width=768' +
 					'&height=393&srs=EPSG:25830&format=' + $('#format').val());
 		}
 		else {
 			if (features == '')
-				window.open('http://localhost:8080/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
+				window.open('http://192.168.1.14:8080/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
 				'&request=GetFeature&typeName=' + capa + '&outputFormat=shape-zip');
 			else
-				window.open('http://localhost:8080/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
+				window.open('http://192.168.1.14:8080/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
 				'&request=GetFeature&typeName=' + capa + '&maxFeatures=' + features + '&outputFormat=shape-zip');		
 		}
 		
