--- a/geoportal/descargas.html
+++ b/geoportal/descargas.html
@@ -146,7 +146,7 @@
 
 $('.selectpicker').selectpicker({
 	width: '100%'
-});
+}).selectpicker('mobile');
 
 $("h1, h2").each(function(){
 	var fontSize = $(this).css('font-size');
