--- a/geoportal/descargas.html
+++ b/geoportal/descargas.html
@@ -232,6 +232,7 @@ denunciasHeatMap.setVisible(false);
 map.addLayer(groupCapasBase); // Añadimos grupo de Capas 1
 map.addLayer(groupCartoTorrentWMST); // Añadimos grupo de Capas 2
 map.addLayer(groupCartoTorrentWMS); // Añadimos grupo de Capas 2
+map.addLayer(torrent_cascada); // Añadimos grupo de Capas 3
 
 
 // Añadimos Control OverviewMap
