--- a/geoportal/index.html
+++ b/geoportal/index.html
@@ -118,6 +118,12 @@
 													</li>										
 												</ul>
 											</li>
+											<li class="dropdown" style="height: 100%"><a href="#" style="height: 70px;" data-toggle="dropdown">Idioma
+												<span class="caret"></span>
+											    <ul style="width: 100%" class="dropdown-menu"></ul>
+											    <li class="dropdown"><a href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=es&amp;' + (window.location.href.split('?').length &gt; 1 &amp;&amp; window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&amp;lang(=[^&amp;]*)?|^lang(=[^&amp;]*)?&amp;?/, '') : window.location.href.split('?')[1]))">Castellano</a></li>
+											    <li class="dropdown"><a href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=val&amp;' + (window.location.href.split('?').length &gt; 1 &amp;&amp; window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&amp;lang(=[^&amp;]*)?|^lang(=[^&amp;]*)?&amp;?/, '') : window.location.href.split('?')[1]))">Valencià</a></li>
+											    <li class="dropdown"><a href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=en&amp;' + (window.location.href.split('?').length &gt; 1 &amp;&amp; window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&amp;lang(=[^&amp;]*)?|^lang(=[^&amp;]*)?&amp;?/, '') : window.location.href.split('?')[1]))">English</a></li></a></li>
 										</ul>
 									</div>
 	
